cabal-version:      2.4
name:               latuc
version:            0.1.0.0


common shared
  default-extensions:
      ViewPatterns
    , LambdaCase
    , MultiWayIf
    , BlockArguments

  ghc-options: -Wall -Wextra


common deps
    build-depends:
          base ^>=4.15.1.0
        , parsec
        , containers
        , extra


library
    import: shared, deps
    hs-source-dirs: lib
    exposed-modules: Latuc
    other-modules:
          Helper.Binary
        , Helper.Escape
        , Helper.Style
        , Helper.Unary
        , Helper.UnaryWithOption
        , Helper.Mappings
    default-language: Haskell2010


executable latuc
    import: shared
    main-is: Main.hs
    build-depends:
          base ^>=4.15.1.0
        , latuc
    hs-source-dirs: app
    default-language: Haskell2010


test-suite test
    import: shared, deps
    type: exitcode-stdio-1.0
    hs-source-dirs: lib, test
    main-is: Test.hs
    other-modules: Latuc
    build-depends: latuc
